--- a/styles.css
+++ b/styles.css
@@ -37,15 +37,7 @@ background-color: #ac73d4;
 }
 
 
-.advert{
-    background-color: #ff7400;
-    text-align: center;
-}
 
-
-.padding{
-    padding-bottom:2rem;
-}
 
 .snackbox{
     background-color:#ff7400;
@@ -74,11 +66,37 @@ background-color: #ac73d4;
 
 .muggle{
     width: 100%;
-    margin-bottom: 2rem;
+    color: #270042;
+    background-color: #ff7400;
+    border: 4px solid #270042;
+    height: 50px
+    
 }
 
-.magic{
-max-width: 100%;
+#magic{
+    max-width: 100%;
+    background-color:#ff7400;
+    border: 4px solid #270042;
+    }
+
+#magic img {
+    margin-top: 20px;
+    margin-bottom: 20px;  
+}
+
+.best_sellers{
+    margin-bottom: 20px;
+    padding: 10px;
+    
+}
+
+.contact {
+    padding-top: 40px;
+    text-align: center;
+}
+
+.light{
+    text-align: center;
 }
 
 /*---more magic background---*/
@@ -86,7 +104,7 @@ max-width: 100%;
 figure{
     position: relative;
     width: 100%;
-    height:30%;
+    height:50%;
     margin:0;
 }
 
