--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,8 @@ figure{
     padding-top:20px;
     padding-bottom: 20px;
     text-align: center;
-    background-color: #900000
+    background-color: #900000;
+    color: #ff7400;
 }
 
 
