--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html, body {
     scroll-behavior: smooth; 
     background-color: #ac73d4;
     
+    
 }
 
 /*---page one---*/
@@ -40,7 +41,7 @@ html, body {
     position: absolute;
     top: 40%;
     text-align: center;
-    padding:100px;
+    
 }
 
 .title h1{
@@ -110,6 +111,7 @@ scroll {
 }
 .snackimg img{
     max-width: 100%;
+    height: auto;
 }
 
 
@@ -159,6 +161,7 @@ figure{
 
 .display-4{
     color: #900000;
+    text-align: center;
 }
 
 .best_sellers{
@@ -188,8 +191,10 @@ figure{
     
 }
 
-#magic{
+.tricks{
     max-width: 100%;
+}
+#magic{
     background-color:#270042;
     border: 4px solid #270042;
     }
@@ -213,9 +218,6 @@ figure{
     padding: 10px;
 }
 
-.map{
-    max-width: 100%;
-}
 
 /*---footer---*/
 
@@ -242,14 +244,19 @@ figure{
     font-size:1.2rem
 }
 
+img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+
 
 /*-------------------Device Changes---------------*/
 
 /* xs devices */
 
         .title{
-          position: absolute;
-              top: 8%; }
+            top: 18%; }
               
          .title h1{
         text-shadow: 1px 1px 15px #270042;
@@ -260,22 +267,20 @@ figure{
              padding-left: 10px;
             }
 
-
             
         /* sm devices */
         @media (min-width: 576px) {
       
 
             .title{
-            top: 10%;
+            top: 30%;
         }
 
             .title h1{
             text-shadow: 1px 1px 15px #270042;
-            font-size: 500%;
+            font-size: 600%;
         }
-            .display-4{
-                font-size: 200%;
+        
     }
              .navbar-brand{
                 padding-left: 20px;
@@ -286,11 +291,9 @@ figure{
             
         /* md devices */
         @media (min-width: 768px) {
-       
-        
-            
+   
             .title{
-            top: 10%;
+            top: 25;
         }
 
             .title h1{
@@ -313,7 +316,7 @@ figure{
             
             
             .title{
-            top: 15%;
+            top: 25%;
         }
 
             .title h1{
