--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ html, body {
     font-family: 'Chelsea Market', cursive, sans-serif;
     scroll-behavior: smooth; 
     background-color: #ac73d4;
+   
+   
     
     
 }
@@ -20,7 +22,7 @@ html, body {
 }
 
 .navbar-brand{
-  Padding-left: 50px;  
+  Padding-left: 50px;
 }
 
 .navbar-nav li{
@@ -39,7 +41,8 @@ html, body {
 
 .title{
     position: absolute;
-    top: 40%;
+    top: 5%;
+    transform: translateY(-10%);
     text-align: center;
     
 }
@@ -111,7 +114,7 @@ scroll {
 }
 .snackimg img{
     max-width: 100%;
-    height: auto;
+    max-height:100%;
 }
 
 
@@ -165,11 +168,12 @@ figure{
 }
 
 .best_sellers{
-    padding: 15px;
+   
     background-color: #ac73d4;
     color: #900000;
     text-align: center;
 }
+
 
 .BS{
    padding-top:20px;
@@ -180,13 +184,14 @@ figure{
 
 
 
+
 /*---muggle tricks---*/
 .muggle{
     width: 100%;
     color: #270042;
     background-color: #ff7400;
     border: 4px solid #270042;
-    height: 50px;
+    height: 80px;
 
     
 }
@@ -194,6 +199,7 @@ figure{
 .tricks{
     max-width: 100%;
 }
+
 #magic{
     background-color:#270042;
     border: 4px solid #270042;
@@ -202,6 +208,11 @@ figure{
 #magic img {
     margin-top: 20px;
     margin-bottom: 20px;  
+}
+
+.price{
+    color: #ac73d4;
+    text-align: center;
 }
 
 /*---order now---*/
@@ -254,36 +265,42 @@ img-fluid {
 /*-------------------Device Changes---------------*/
 
 /* xs devices */
+body {background-color: red}
 
         .title{
-            top: 18%; }
+            top: 18%;
+           transform: translateY(-10%) 
+}
+            
               
          .title h1{
         text-shadow: 1px 1px 15px #270042;
         font-size: 400%;
+        text-align: center;
         }   
 
          .navbar-brand{
              padding-left: 10px;
+             height: 80px;
             }
 
             
         /* sm devices */
         @media (min-width: 576px) {
-      
-
+    body  {background-color: yellow}
             .title{
-            top: 30%;
+            top: 18%;
         }
 
             .title h1{
             text-shadow: 1px 1px 15px #270042;
-            font-size: 600%;
+            font-size: 500%;
         }
         
     }
              .navbar-brand{
                 padding-left: 20px;
+                height: 
             }
 }
 
@@ -291,14 +308,15 @@ img-fluid {
             
         /* md devices */
         @media (min-width: 768px) {
-   
+  body {background-color: orange}
             .title{
-            top: 25;
+            top: 45%;
+            transform: translateY(-10%)
         }
 
             .title h1{
             text-shadow: 1px 1px 15px #270042;
-            font-size: 600%;
+            font-size: 700%;
         }
             .display-4{
                 font-size: 400%;
@@ -313,7 +331,7 @@ img-fluid {
             
         /* lg devices */
         @media (min-width: 992px) {
-            
+         body {background-color: green}
             
             .title{
             top: 25%;
@@ -327,6 +345,10 @@ img-fluid {
             .navbar-brand{
                 padding-left: 30px;
             }
+            
+            .snackbox h1{
+                font-size: 600%;
+            }
          
                 
         }
@@ -334,16 +356,24 @@ img-fluid {
             
         /* xl devices */
         @media (min-width: 1200px) {
-        
+      body  {background-color: blue}
             
            .title{
-            top: 30%;
+            top: 50%;
+            bottom 20%;
         }
 
             .title h1{
             text-shadow: 1px 1px 15px #270042;
             font-size: 1000%;
         }
+            .display-4{
+                font-size: 400%;
+                text-align: center;
+    }
+            .snackbox h1{
+                font-size: 800%;
+            }
             
         }
 
